tests/should_fail/struct_redeclared.nv
module main

// SHOULD FAIL: struct redeclared with same name
struct Foo {
    x: Int
}
struct Foo {
    y: String
}
